Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30934

With a QGLWidget inside a QTabWidget the mouse and enter/leave events are not working correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.1.0 RC1
    • 5.1.0 Beta 1
    • GUI: Window management
    • None
    • Mac
    • 381c0050c12965edc0a44ef7eae0bf6d7388a15a

    Description

      With a QGLWidget inside a QTabWidget the mouse and enter/leave events are not working correctly. In the attached example, there are two tabs, both with a QGLWidget set on each. In the first tab, no leave event seems to occur and nor does it get any mouse events either. When clicking on the second tab, the leave events work if you go into the tabbar (the background is grey then) but not if you go outside of the QGLWidget on the sides.

      This appears to be a Mac specific problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes